update second min code

--- a/Sem 1/Python/Day 7 Tanmoy.ipynb
+++ b/Sem 1/Python/Day 7 Tanmoy.ipynb
@@ -454,30 +454,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d9b0c559",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input list of numbers(-1 to end): \n",
+      "Input List: [1, 1, 1, 1, 1, 1, 2]\n",
+      "Second minimumm not present in list\n"
+     ]
+    }
+   ],
    "source": [
     "def find_sec_min(nums):\n",
-    "    sec_min = min = nums[0] \n",
+    "    sec_min = min = None\n",
     "    \n",
-    "    for num in nums[1:]:\n",
-    "        if num < sec_min:\n",
-    "            if num < min:\n",
-    "                sec_min = min\n",
-    "                min = num\n",
-    "                \n",
-    "            else:\n",
-    "                sec_min = num\n",
+    "    for num in nums:\n",
+    "        if min is None or num < min:\n",
+    "            sec_min = min\n",
+    "            min = num\n",
+    "\n",
+    "        elif num != min and (sec_min is None or num < sec_min):\n",
+    "            sec_min = num\n",
     "    \n",
-    "    if min == sec_min:\n",
+    "    if sec_min is None:\n",
     "        return -1\n",
     "    else:\n",
     "        return sec_min\n",
-    "                \n",
-    "nums = [8, 8, 7, 8]\n",
-    "sec_min = "
+    "\n",
+    "nums = [] # empty list      \n",
+    "print(\"Input list of numbers(-1 to end): \", end = '')\n",
+    "\n",
+    "while True:\n",
+    "    num = int(input())\n",
+    "    if num == -1:\n",
+    "        break\n",
+    "    nums = nums + [num]\n",
+    "    \n",
+    "print(f\"\\nInput List: {nums}\")\n",
+    "\n",
+    "sec_min = find_sec_min(nums)\n",
+    "if sec_min == -1:\n",
+    "    print(\"Second minimumm not present in list\")\n",
+    "else:\n",
+    "    print(f\"Second minimum: {sec_min}\")"
    ]
   },
   {
@@ -492,6 +515,41 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "14dc671a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0cd4a32a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input list of numbers(-1 to end): [1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [] # empty list      \n",
+    "print(\"Input list of numbers(-1 to end): \", end = '')\n",
+    "\n",
+    "while True:\n",
+    "    num = int(input())\n",
+    "    if num == -1:\n",
+    "        break\n",
+    "    nums = nums + [num]\n",
+    "\n",
+    "print(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28083f1e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -513,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
