add second max code

--- a/Sem 1/Python/Day 7 Tanmoy.ipynb
+++ b/Sem 1/Python/Day 7 Tanmoy.ipynb
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "d9b0c559",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
      "output_type": "stream",
      "text": [
       "Input list of numbers(-1 to end): \n",
-      "Input List: [1, 1, 1, 1, 1, 1, 2]\n",
+      "Input List: [1, 1, 1, 1, 1, 1]\n",
       "Second minimumm not present in list\n"
      ]
     }
@@ -513,11 +513,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "14dc671a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input list of numbers(-1 to stop): \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input list: [1, 1, 1, 1, 1, 2]\n",
+      "Second maximum: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_sec_max(nums):\n",
+    "    sec_max = max = None\n",
+    "\n",
+    "    for num in nums:\n",
+    "        if max is None or num > max:\n",
+    "            sec_max = max\n",
+    "            max = num\n",
+    "\n",
+    "        elif num != max and (sec_max is None or num > sec_max):\n",
+    "            sec_max = num\n",
+    "\n",
+    "    if sec_max is None:\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return sec_max\n",
+    "    \n",
+    "nums = []\n",
+    "print(\"Input list of numbers(-1 to stop): \")\n",
+    "while True:\n",
+    "    num = int(input())\n",
+    "    if num == -1:\n",
+    "        break\n",
+    "    nums = nums + [num]\n",
+    "\n",
+    "print(f\"Input list: {nums}\")\n",
+    "sec_max = find_sec_max(nums)\n",
+    "if sec_max == -1:\n",
+    "    print(\"Second maximum not present in list\")\n",
+    "else:\n",
+    "    print(f\"Second maximum: {sec_max}\")"
+   ]
   },
   {
    "cell_type": "code",
