--- a/Sem 1/Python/Tanmoy Day 9.ipynb
+++ b/Sem 1/Python/Tanmoy Day 9.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "id": "d9cb631d",
    "metadata": {},
    "outputs": [
@@ -253,41 +253,122 @@
      "output_type": "stream",
      "text": [
       "A:\n",
-      "[[2 3]\n",
-      " [3 2]]\n",
+      "[[4 0 0]\n",
+      " [2 5 0]\n",
+      " [1 3 6]]\n",
+      "\n",
       "B:\n",
-      "[[4 1]\n",
-      " [1 4]]\n",
+      "[[4 1 2]\n",
+      " [0 4 1]\n",
+      " [0 0 3]]\n",
+      "\n",
       "A + B:\n",
-      "[[6 4]\n",
-      " [4 6]]\n",
+      "[[8 1 2]\n",
+      " [2 9 1]\n",
+      " [1 3 9]]\n",
+      "\n",
       "A - B:\n",
-      "[[-2  2]\n",
-      " [ 2 -2]]\n",
+      "[[ 0 -1 -2]\n",
+      " [ 2  1 -1]\n",
+      " [ 1  3  3]]\n",
+      "\n",
       "A x B:\n",
-      "[[11 14]\n",
-      " [14 11]]\n",
-      "A / B:\n",
-      "[[0 3]\n",
-      " [3 0]]\n",
+      "[[16  0  0]\n",
+      " [ 0 20  0]\n",
+      " [ 0  0 18]]\n",
+      "\n",
       "Transpose of A:\n",
-      "[[2 3]\n",
-      " [3 2]]\n",
+      "[[4 2 1]\n",
+      " [0 5 3]\n",
+      " [0 0 6]]\n",
+      "\n",
       "Transpose of B:\n",
-      "[[4 1]\n",
-      " [1 4]]\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'matrix' object has no attribute 'array_equal'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [46]\u001b[0m, in \u001b[0;36m<cell line: 46>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     44\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mA\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is not symmetric\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 46\u001b[0m \u001b[43mcheck_symm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[1;32mIn [46]\u001b[0m, in \u001b[0;36mcheck_symm\u001b[1;34m(A)\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcheck_symm\u001b[39m(A):\n\u001b[0;32m     40\u001b[0m     AT \u001b[38;5;241m=\u001b[39m A\u001b[38;5;241m.\u001b[39mtranspose()\n\u001b[1;32m---> 41\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mA\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray_equal\u001b[49m(AT):\n\u001b[0;32m     42\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mA\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is symmetric\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'matrix' object has no attribute 'array_equal'"
+      "[[4 0 0]\n",
+      " [1 4 0]\n",
+      " [2 1 3]]\n",
+      "\n",
+      "[[4 0 0]\n",
+      " [2 5 0]\n",
+      " [1 3 6]] is not symmetric\n",
+      "\n",
+      "[[4 1 2]\n",
+      " [0 4 1]\n",
+      " [0 0 3]] is not symmetric\n",
+      "\n",
+      "Det. of \n",
+      "[[4 0 0]\n",
+      " [2 5 0]\n",
+      " [1 3 6]]:\n",
+      "120.0\n",
+      "\n",
+      "Det. of \n",
+      "[[4 1 2]\n",
+      " [0 4 1]\n",
+      " [0 0 3]]:\n",
+      "48.0\n",
+      "\n",
+      "[[4 0 0]\n",
+      " [2 5 0]\n",
+      " [1 3 6]] is not skew-symmetric\n",
+      "\n",
+      "[[4 1 2]\n",
+      " [0 4 1]\n",
+      " [0 0 3]] is not skew-symmetric\n",
+      "\n",
+      "[[4 0 0]\n",
+      " [2 5 0]\n",
+      " [1 3 6]] is not Hermitian\n",
+      "\n",
+      "[[4 1 2]\n",
+      " [0 4 1]\n",
+      " [0 0 3]] is not Hermitian\n",
+      "\n",
+      "[[4 0 0]\n",
+      " [2 5 0]\n",
+      " [1 3 6]] is not skew-Hermitian\n",
+      "\n",
+      "[[4 1 2]\n",
+      " [0 4 1]\n",
+      " [0 0 3]] is not skew-Hermitian\n",
+      "\n",
+      "[[4 0 0]\n",
+      " [2 5 0]\n",
+      " [1 3 6]] is not orthogonal\n",
+      "\n",
+      "[[4 1 2]\n",
+      " [0 4 1]\n",
+      " [0 0 3]] is not orthogonal\n",
+      "\n",
+      "[[4 0 0]\n",
+      " [2 5 0]\n",
+      " [1 3 6]] is not upper triangular matrix\n",
+      "\n",
+      "[[4 1 2]\n",
+      " [0 4 1]\n",
+      " [0 0 3]] is upper triangular matrix\n",
+      "\n",
+      "[[4 0 0]\n",
+      " [2 5 0]\n",
+      " [1 3 6]] is lower triangular matrix\n",
+      "\n",
+      "[[4 1 2]\n",
+      " [0 4 1]\n",
+      " [0 0 3]] is not lower triangular matrix\n",
+      "\n",
+      "adjoint of [[4 0 0]\n",
+      " [2 5 0]\n",
+      " [1 3 6]]:\n",
+      "[[ 29   0   0]\n",
+      " [-12  23   0]\n",
+      " [  1 -12  19]]\n",
+      "\n",
+      "adjoint of [[4 1 2]\n",
+      " [0 4 1]\n",
+      " [0 0 3]]:\n",
+      "[[12 -3 -6]\n",
+      " [ 0 12 -4]\n",
+      " [ 0  0 15]]\n",
+      "\n"
      ]
     }
    ],
@@ -299,47 +380,163 @@
     "    print(f\"{name}:\\n{np.array2string(mat, separator=' ', suppress_small=True)}\\n\")\n",
     "    \n",
     "    \n",
-    "A = np.matrix([[2, 3],\n",
-    "               [3, 2]])\n",
+    "# A = np.array([[2, 3],\n",
+    "#                [3, 2]])\n",
     "\n",
-    "B = np.matrix([[4, 1],\n",
-    "               [1, 4]])\n",
+    "# B = np.array([[4, 1],\n",
+    "#                [1, 4]])\n",
+    "\n",
+    "A = np.array([[4, 0, 0],\n",
+    "              [2, 5, 0],\n",
+    "              [1, 3, 6]])\n",
+    "\n",
+    "B = np.array([[4, 1, 2],\n",
+    "              [0, 4, 1],\n",
+    "              [0, 0, 3]])\n",
     "\n",
     "print(f\"A:\")\n",
     "print(A)\n",
+    "print()\n",
     "\n",
     "print(f\"B:\")\n",
     "print(B)\n",
+    "print()\n",
     "\n",
+    "# addition\n",
     "print(f\"A + B:\")\n",
     "print(A + B)\n",
+    "print()\n",
     "\n",
+    "# subtraction\n",
     "print(f\"A - B:\")\n",
     "print(A - B)\n",
+    "print()\n",
     "\n",
+    "# multiplication\n",
     "print(f\"A x B:\")\n",
     "print(A * B)\n",
-    "\n",
-    "print(f\"A / B:\")\n",
-    "print(A // B)\n",
+    "print()\n",
     "\n",
     "AT = A.transpose()\n",
     "BT = B.transpose()\n",
     "print(\"Transpose of A:\")\n",
     "print(AT)\n",
+    "print()\n",
     "print(\"Transpose of B:\")\n",
     "print(BT)\n",
+    "print()\n",
     "    \n",
     "def check_symm(A):\n",
-    "    AT = A.transpose()\n",
-    "    if A.array_equal(AT):\n",
+    "    if np.array_equal(A, AT):\n",
     "        print(f\"{A} is symmetric\")\n",
     "    else:\n",
     "        print(f\"{A} is not symmetric\")\n",
-    "        \n",
-    "check_symm(A)\n",
+    "    print()\n",
     "    \n",
-    "    "
+    "def calc_det(A):\n",
+    "    det_A = np.round(np.linalg.det(A))\n",
+    "    print(f\"Det. of \\n{A}:\")\n",
+    "    print(det_A)\n",
+    "    print()\n",
+    "    \n",
+    "def check_anti_symm(A):\n",
+    "    if np.array_equal(-A, AT):\n",
+    "        print(f\"{A} is skew-symmetric\")\n",
+    "    else:\n",
+    "        print(f\"{A} is not skew-symmetric\")\n",
+    "    print()\n",
+    "    \n",
+    "def check_hermitian(A):\n",
+    "    conj_A = np.conj(AT)\n",
+    "    if np.array_equal(A, conj_A):\n",
+    "        print(f\"{A} is Hermitian\")\n",
+    "    else:\n",
+    "        print(f\"{A} is not Hermitian\")\n",
+    "    print()\n",
+    "    \n",
+    "def check_skew_hermitian(A):\n",
+    "    conj_A = np.conj(AT)\n",
+    "    if np.array_equal(-A, conj_A):\n",
+    "        print(f\"{A} is skew-Hermitian\")\n",
+    "    else:\n",
+    "        print(f\"{A} is not skew-Hermitian\")\n",
+    "    print()\n",
+    "    \n",
+    "def check_orthogonal(A):\n",
+    "    if np.allclose(np.dot(A.T, A), np.eye(A.shape[0])):\n",
+    "        print(f\"{A} is orthogonal\")\n",
+    "    else:\n",
+    "        print(f\"{A} is not orthogonal\")\n",
+    "    print()\n",
+    "    \n",
+    "def check_up_tri(A):\n",
+    "    if np.all(np.tril(A, -1) == 0):\n",
+    "        print(f\"{A} is upper triangular matrix\")\n",
+    "    else:\n",
+    "        print(f\"{A} is not upper triangular matrix\")\n",
+    "    print()\n",
+    "    \n",
+    "def check_low_tri(A):\n",
+    "    if np.all(np.triu(A, 1) == 0):\n",
+    "        print(f\"{A} is lower triangular matrix\")\n",
+    "    else:\n",
+    "        print(f\"{A} is not lower triangular matrix\")\n",
+    "    print()\n",
+    "    \n",
+    "# Function to calculate the cofactor matrix of a 3x3 matrix\n",
+    "def cofactor_matrix(A):\n",
+    "    cofactor_mat = np.zeros_like(A)\n",
+    "    \n",
+    "    # Calculate the cofactor for each element in the matrix\n",
+    "    for i in range(3):\n",
+    "        for j in range(3):\n",
+    "            # Get the minor matrix by excluding row i and column j\n",
+    "            minor = np.delete(np.delete(A, i, axis=0), j, axis=1)\n",
+    "            \n",
+    "            # Calculate the determinant of the minor matrix\n",
+    "            minor_det = np.linalg.det(minor)\n",
+    "            \n",
+    "            # Apply the sign change based on the position (i,j)\n",
+    "            cofactor_mat[i, j] = ((-1) ** (i + j)) * minor_det\n",
+    "    \n",
+    "    return cofactor_mat\n",
+    "\n",
+    "# Function to calculate the adjoint (adjugate) of a 3x3 matrix\n",
+    "def adjoint(A):\n",
+    "    cofactor_mat = cofactor_matrix(A)\n",
+    "    # Transpose the cofactor matrix to get the adjoint\n",
+    "    adj_A = np.transpose(cofactor_mat)\n",
+    "    print(f\"adjoint of {A}:\")\n",
+    "    print(adj_A)\n",
+    "    print()\n",
+    "    \n",
+    "\n",
+    "check_symm(A)\n",
+    "check_symm(B)\n",
+    "    \n",
+    "calc_det(A)\n",
+    "calc_det(B)\n",
+    "\n",
+    "check_anti_symm(A)\n",
+    "check_anti_symm(B)\n",
+    "\n",
+    "check_hermitian(A)\n",
+    "check_hermitian(B)\n",
+    "\n",
+    "check_skew_hermitian(A)\n",
+    "check_skew_hermitian(B)\n",
+    "\n",
+    "check_orthogonal(A)\n",
+    "check_orthogonal(B)\n",
+    "\n",
+    "check_up_tri(A)\n",
+    "check_up_tri(B)\n",
+    "\n",
+    "check_low_tri(A)\n",
+    "check_low_tri(B)\n",
+    "\n",
+    "adjoint(A)\n",
+    "adjoint(B)"
    ]
   },
   {
